results images overflow fix

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -636,6 +636,13 @@ svg:hover {
                             margin: 0;
                             width: 2.2rem;
                             height: 2.2rem;
+                            display: block;
+                            box-sizing: border-box;
+                        }
+                        .likes__img,
+                        .results__img {
+                            width: 100%;
+                            height: 100%;
                         }
                         .likes__figure,
                         .results__figure,
@@ -643,6 +650,7 @@ svg:hover {
                             padding:5px;
                             background-color: rgba(255,255,255,0.6);
                             border-radius: 0.25rem;
+                            box-sizing: border-box;
                         }
                         .likes__rank,
                         .results__rank {
@@ -1176,7 +1184,7 @@ svg:hover {
         scrollbar-width: thin;
         scrollbar-color: var(--firefox-scrollbar-handle) rgba(0, 0, 0, 0.0);
         position:relative;
-
+        box-sizing: border-box;
     }
     .coin {
         padding-top: 1rem;
